[gd_scene load_steps=5 format=3 uid="uid://wwy8xmdrcl8p"]

[ext_resource type="Script" uid="uid://cpm1qqxsxkkf7" path="res://scripts/main_menu.gd" id="1_3swsp"]
[ext_resource type="Theme" uid="uid://01675knsq84l" path="res://assets/themes/main_menu_theme.tres" id="1_8ih8i"]
[ext_resource type="PackedScene" uid="uid://cwnur7r84mgka" path="res://scenes/SaveManagementPanel.tscn" id="2_0ss3t"]
[ext_resource type="PackedScene" uid="uid://c6wo4df14noqf" path="res://scenes/options_menu.tscn" id="4_wu84c"]

[node name="Main Menu" type="Control" node_paths=PackedStringArray("save_management_panel", "continue_button", "options_menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8ih8i")
script = ExtResource("1_3swsp")
save_management_panel = NodePath("SaveManagementPanel")
continue_button = NodePath("VBoxContainer/ContinueButton")
options_menu = NodePath("OptionsMenu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0509804, 0.0156863, 0.0745098, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -80.0
offset_right = 96.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="LoadButton" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "Load Game
"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="SaveManagementPanel" parent="." instance=ExtResource("2_0ss3t")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 86.0
offset_top = 70.0
offset_right = 179.0
offset_bottom = 70.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 104
text = "NONONOMICON"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsMenu" parent="." instance=ExtResource("4_wu84c")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="new_game"]
[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadButton" to="." method="load_game"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="exit"]
